turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:14: error: not found: value printl
			printl(""+colorId);
                        ^